<resources>
    <string name="app_name">Galactica</string>
    <string name="Choose">Choose your PLANET</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnMoreInfo">More</string>
    <string name="btnBack">Back</string>
    <string name="btnShowVideo">Show video!</string>
    <string name="chooseplanet">Pick a planet to learn!</string>
    <string name="txtview1">Density</string>
    <string name="txtView2" />
    <string name="txtView">"Volume "</string>
    <string name="gravity">Gravity</string>
    <string name="txt">Mean radius;</string>
    <string name="radius">Mean radius:</string>
    <string name="gravityy">Gravity:</string>
    <string name="density">Density:</string>
    <string name="dimension">Dimension:</string>
    <string name="disc">Discovered by:</string>
    <string name="inc">Inclination:</string>
    <string name="ecc">Eccentricity:</string>
    <string name="discdate">Discovery date:</string>
    <string name="eq">Equaradius:</string>
    <string name="densityUnit">g.cm <sup><small><small> 3 </small></small></sup></string>
    <string name="gravityUnit">ms <sup><small><small> -2 </small></small></sup></string>
    <string name="kiloUnit">km</string>
    <string name="play">Play</string>
    <string name="click_to_play_music">Click to play music!</string>
    <string name="we_would_love_to_hear_your_feedback">We would love to hear your feedback!</string>
    <string name="feedback_galactica_com">feedback@galactica.com</string>
    <string name="about_us">About us</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="click_me">(Click me!)</string>

</resources>
